# heraldstack-mcp

./: README.md  STYLE_GUIDE.md  registry.yaml
.github/workflows/: readme-lint.yml
configs/: dev.mcp.json  gander-session.yaml  haunting.mcp.json  shannon.mcp.json
docs/: language-preference.md  lifecycle-policies.md  shannon-methodology.md  valkey-caching-strategy.md  verbal-ticks-registry.md  writing-style-guide.md
launchers/agents/: gooseai-mcp.sh  persona-mcp.sh  prompt-crafter-mcp.sh
launchers/aws/: aws-api.sh  aws-docs.sh  aws-iac.sh  billing.sh  cloudtrail.sh  cost-explorer.sh  lambda.sh  well-architected.sh
launchers/bridges/: jaeger-bridge.sh  qdrant-agent-memory-bridge.sh  qdrant-copywriting-bridge.sh  qdrant-prompt-transcripts-bridge.sh  qdrant-shannon-methodology-bridge.sh  qdrant-shared-knowledge-bridge.sh  qdrant-verbal-ticks-bridge.sh  qdrant-writing-inbox-bridge.sh  valkey-bridge.sh
launchers/core/: context7.sh  github.sh  openrouter.sh  qdrant-author.sh  qdrant-multi.sh  qdrant-ollama-expert.sh  qdrant-otel-expert.sh  qdrant-shared-knowledge.sh  qdrant-writing-inbox.sh  qdrant.sh  valkey-mcp.sh
launchers/dev-tools/: chrome-devtools.sh  fetch-mcp.sh  jupyter.sh  notebook-mcp.sh  ollama-mcp.sh  pdf-reader.sh  session-memory.sh  sqlite.sh  stagehand.sh
launchers/filesystem/: filesystem-chrome-extension.sh  filesystem-design-web.sh  filesystem-macmini.sh  filesystem-rocm-code.sh  filesystem-video-analyst.sh  mount-mac-mini.sh
scripts/: heraldstack-project-init.sh
tools/readme-lint/: Cargo.toml
tools/readme-lint/src/: main.rs
(+8 files in other folders)
